@@ -1,0 +1,5 @@
+AC_DEFUN([RTEMS_CHECK_TESTS],[
+AC_REQUIRE([RTEMS_ENABLE_TESTS])
+AC_MSG_CHECKING([if the test suites are enabled])
+AC_MSG_RESULT([$enable_tests])
+])
